--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.6
+  lottie: ^3.3.1
   meta: ^1.15.0
 
 dev_dependencies:
@@ -20,3 +21,12 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - assets/fonts/
+    - assets/animations/rotating-cube.json
+
+  fonts:
+    - family: Tektur
+      fonts:
+        - asset: assets/fonts/tektur.ttf
